Use standard Java base for Scala build